# cooker

./: CMakeLists.txt  README.md  cmake.sh  example_build_cooker.sh  runlist.txt
include/: actree.h  anaE36.h  cookedTof.h  cookerrawtree.h  csitree.h  generalConstantAndUnit.h  mergedCaliTargetTofMwpc.h  mwpctree.h  pgctree.h  tof1tree.h  tof2tree.h  toftree.h  track.h  trackingE36.h
init/: tutorial.xml
recipes/Ac/: acClibS.xml  checkPedestal.xml  conversionAc.xml  fitPedestal.xml  monitorPed.xml  peakCalib.xml  test.xml  tutorial.xml
recipes/CsI/: test.xml  test.xml~
recipes/MWPC/: MWPCAdcVsCh.xml  MWPCPosition.xml  amplifierGainCalibration.xml  analysisCluster.xml  analysisEvent.xml  analysisExtractedCluster.xml  analysisExtractedCluster2.xml  analysisExtractedCluster3.xml  analysisNoise.xml  analysisXClusterDoublet.xml  checkCableSwapping.xml  compGlobalPosition.xml  compareXY.xml  demonstratePosition.xml  extractCluster.xml  fitMWPCPedestal.xml  getMWPCClusterThresholdFirstApproach.xml  getMWPCClusterThresholdFromCharge.xml  getMWPCClusterThresholdSecondApproach.xml  getMWPCEventThresholdFirstApproach.xml  getMWPCEventThresholdSecondApproach.xml  handleDeadStrip.xml  mwpcCookedDataV1.xml  mwpcCookedDataV11.xml  mwpcCookedDataV2.xml  mwpcCookedDataV21.xml  posPuzzle.xml  posResolution.xml  testGain.xml  trackV1.xml  trackV2.xml
recipes/PgC/: PgCClibS.xml  conversionPgC.xml  test.xml
recipes/SFT/: test.xml
recipes/TOF/: conversion.xml  test.xml  tofCao1.xml
recipes/ToF1/: checkPedestal.xml  conversion.xml  test.xml~
recipes/ToF2/: checkPedestal.xml  conversion.xml  conversion.xml~  fitPedestal.xml  fitPedestal.xml~  test.xml  test.xml~
recipes/analysis/Tof_M2/: savetofm2.xml  tofm2.xml
recipes/analysis/checkTof/: test.xml
recipes/tracking/: basicDataType.xml  tracking.xml
shScripts/: make_cook.sh  new_Bishoy.sh  runall_Bishoy.sh  tof_m2.sh
src/: CMakeLists.txt
src/InitReader/: CMakeLists.txt
src/MagneticField/src/: NoInterp_Magnetic_Field.cpp  Old_Magnetic_Field.cpp  Spline_Field.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/src/: Plugin.cpp
src/RecipeReader/: CMakeLists.txt
src/alacarte/src/include/: moc_mainwindow.cxx
src/combine/: CMakeLists.txt
src/cooker/: CMakeLists.txt
src/gdml/: README
src/gdml/gdml_files/: Geant4_survey2013.gdml  Root_survey2013.gdml
src/plugins/: CMakeLists.txt
src/plugins/analysis/: CMakeLists.txt
src/plugins/analysis/Tof_M2/: CMakeLists.txt
src/plugins/analysis/Tof_M2/src/: 1  Tof_M2.cpp  run_3p.sh
src/plugins/analysis/Tof_M2/src/include/: LinkDef.hh  Tof_M2.h  Tof_M2.h~  oldTof_M2h
src/plugins/analysis/Tof_M2/src/saved/: #Tof_M2.cpp#  Tof_M2.cpp  Tof_M2.cpp_08_06_2020  Tof_M2.cpp_7_21_2020  Tof_M2.cpp_7_21_2020_nores  Tof_M2.cpp_7_25_2020  Tof_M2.cpp_7_25_2020_10PM  Tof_M2.cpp_all1  Tof_M2.cpp_aug112020  Tof_M2.cpp_calibratedFinal  Tof_M2.cpp_july19  Tof_M2.cpp_notworking  kera.C  kera.C~
src/plugins/analysis/Tof_M2/src/saved/newsaved/: Tof_M2.cpp_momchange
src/plugins/analysis/Tof_M2/src/saved/to_runMain/: Tof_M2_Al.cpp  Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/epPR_plugins/: Tof_M2_Al.cpp  Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/kmu2_plugins/: Tof_M2_Al.cpp~  Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/singH/: Tof_M2_Al.cpp
src/plugins/analysis/Tof_M2/src/to_run/singH/main_250/: Tof_M2_Al.cpp  Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/singH/old_singH/: Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/singH/saved/multiH/: Tof_M2_Al.cpp  Tof_M2_Al.cpp~  Tof_M2_Ual.cpp  Tof_M2_Ual.cpp~
src/plugins/analysis/Tof_M2/src/to_run/singH/saved/peak250_singH/: Tof_M2_Al.cpp  Tof_M2_Ual.cpp
src/plugins/analysis/Tof_M2/src/to_run/singH/saved/peak250_singH/old_singH/: Tof_M2_Al.cpp
src/plugins/analysis/Tof_M2/src/to_run/tried_Eppeaks/: 1  Tof_M2_Al.cpp
src/plugins/analysis/checkToF/: CMakeLists.txt
src/plugins/analysis/checkToF/init/: checkToF.xml
src/plugins/analysis/checkToF/src/: CheckToF.cpp
src/plugins/analysis/tutorial/: CMakeLists.txt
src/plugins/analysis/tutorial/src/: acCalib.cpp  peakSelect.cpp  tutorial.cpp
src/plugins/analysis/tutorial/src/include/: LinkDef.hh  peakSelect.h  tutorial.h
src/plugins/analysis/tutorial/src/saved/: acCalib.Deb  peakSelect.cppSaved
src/plugins/detector/: CMakeLists.txt
src/plugins/detector/Ac/: CMakeLists.txt
src/plugins/detector/Ac/init/: demo.xml  demo.xsd
src/plugins/detector/CsI/: CMakeLists.txt
src/plugins/detector/CsI/src/: CsI_fitWave.cpp  singleCsI.cpp
src/plugins/detector/CsI/src/include/: singleCsI.h
src/plugins/detector/MWPC/: CMakeLists.txt  CMakeLists.txt~
src/plugins/detector/PgC/: CMakeLists.txt
src/plugins/detector/PgC/init/: demo.xml  demo.xsd
src/plugins/detector/PgC/src/: Det_PgC.cpp  PgCalib.cpp  conversionPgC.cpp  peakSelect.cpp
src/plugins/detector/PgC/src/include/: Det_PgC.h  LinkDef.hh  TrekAdcPedestal.h  peakSelect.h
src/plugins/detector/PgC/src/save/: Det_PgC.cpp  Det_PgC.cpp_2020july9  Det_PgC.cpp_Latest  Det_PgC.cpp_new  Det_PgC.cpp_sep27
src/plugins/detector/PgC/src/save/new_DetPgC/: Det_PgC.cpp
src/plugins/detector/SFT/: CMakeLists.txt
src/plugins/detector/TOF/: CMakeLists.txt
src/plugins/detector/ToF1/: CMakeLists.txt  CMakeLists.txt~
src/plugins/detector/ToF2/: CMakeLists.txt
src/plugins/tracking/: CMakeLists.txt
src/plugins/tracking/init/: demo.xml  demo.xsd
src/plugins/tracking/src/: 1  Det_tracking.cpp  basicDataType.cpp  fieldMap.cpp  fieldStepper.cpp  trackFinder.cpp  trackSite.cpp  trackSystem.cpp
src/plugins/tracking/src/include/: Det_tracking.h  LinkDef.hh  fieldStepper.h  trackFinder.h
src/plugins/tracking/src/saved/: basicDataType.cpp  fieldStepper.cpp  testbasicDataType.cpp
src/tree/: CMakeLists.txt
src/tree/src/: actree.cpp  anaE36.cpp  cookedTof.cpp  cookerrawtree.cpp  csitree.cpp  mergedCaliTargetTofMwpc.cpp  mwpctree.cpp  pgctree.cpp  tof1tree.cpp  tof2tree.cpp  track.cpp  trackingE36.cpp
src/tree/src/include/: LinkDef.hh
src/treeinfo/: CMakeLists.txt
src/visualcooker/: CMakeLists.txt
(+140 files in other folders)
